testdata/corset/invalid/compute_invalid_08.lisp
;;error:3:15-29:incompatible type (u32)
(defcolumns (X :i32))
(defcomputed ((Y :i16@prove)) (id X))
